--- a/resume.tex
+++ b/resume.tex
@@ -182,6 +182,43 @@ B.E, Electronics and Communication Engineering graduate with keen interest to be
 \subsection*{10th Standard, {\normalsize \normalfont St Josephs's Indian High School, 96\%} \hfill Jun 2013 --- Apr 2014} 
 \vspace{0.2cm}
 
+%%%%%%% --------------------------------------------------------------------------------------
+%%%%%%%  WORK EXPERIENCE
+%%%%%%% --------------------------------------------------------------------------------------
+\section{Work Experience}
+
+%%% ----- Best way to write items (Credit - ResumePuppy.com)
+        % \item Developed AngularJS microservice to automate parsing of ~300 emails/day for efficient service request categorization using Linux MBox & Perl scripts; reduced manual re-allocation by 87%.
+        % \item Led the development, build and bring-up execution of Lyft’s first functional AV platform from start to finish; established fleet-grade product reliability over 5 months.
+        % \item Enhanced user experience by fine-tuning stored procedures & SQL queries for efficient data retrieval from ~4M records accessed by 5000+ users worldwide.
+        % \item Built a custom menu single handedly using HTML5, CSS3, XML and JSP and improved the performance of existing application by tuning the PL/SQL scripts by 20\% and reduced on-migration time.
+        
+
+%%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
+\subsection*{Software Test Engineer \hfill Jan 2021 --- Present} 
+\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
+    \begin{zitemize}
+        \item Airbag Embedded Software Validation Engineer, primarily working on Drive Data Recorder and Diagnostic features 
+        \item Responsible for Test Specification, Test Automation Script Development for Hardware in Loop (HiL) validation using Perl Framework.
+    \end{zitemize}
+
+
+%%%%%%% ----------------------------------- Role 5 ----------------------------------- %%%%%%%
+\subsection*{Intern \hfill Jan 2020 --- May 2020} 
+\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
+    \begin{zitemize}
+        \item Designed Automation Tools for Signal Visualisation and Test status updation using python for Vehicle Motion Control Team 
+        \item Contributed in Vehicle Motion Control Software Validation using Matlab and Simulink
+    \end{zitemize}
+    
+%%%%%%% ----------------------------------- Role 6 ----------------------------------- %%%%%%%
+\subsection*{Intern \hfill Jul 2019 --- Aug 2019} 
+\subtext{Verikwest Systems  \hfill Bangalore} 
+    \begin{zitemize}
+        \item Worked on developing VIP for low power interface module in AMBA for ARM processor
+        \item Designed Tests to verify the functionality of the module
+        
+    \end{zitemize}
 
 
 %%%%%%% --------------------------------------------------------------------------------------
@@ -230,43 +267,7 @@ B.E, Electronics and Communication Engineering graduate with keen interest to be
 
 
 
-%%%%%%% --------------------------------------------------------------------------------------
-%%%%%%%  WORK EXPERIENCE
-%%%%%%% --------------------------------------------------------------------------------------
-\section{Experience}
 
-%%% ----- Best way to write items (Credit - ResumePuppy.com)
-        % \item Developed AngularJS microservice to automate parsing of ~300 emails/day for efficient service request categorization using Linux MBox & Perl scripts; reduced manual re-allocation by 87%.
-        % \item Led the development, build and bring-up execution of Lyft’s first functional AV platform from start to finish; established fleet-grade product reliability over 5 months.
-        % \item Enhanced user experience by fine-tuning stored procedures & SQL queries for efficient data retrieval from ~4M records accessed by 5000+ users worldwide.
-        % \item Built a custom menu single handedly using HTML5, CSS3, XML and JSP and improved the performance of existing application by tuning the PL/SQL scripts by 20\% and reduced on-migration time.
-        
-
-%%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
-\subsection*{Software Test Engineer \hfill Jan 2021 --- Present} 
-\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
-    \begin{zitemize}
-        \item Airbag Embedded Software Validation Engineer, primarily working on Drive Data Recorder and Diagnostic features 
-        \item Responsible for Test Specification, Test Automation Script Development for Hardware in Loop (HiL) validation using Perl Framework.
-    \end{zitemize}
-
-
-%%%%%%% ----------------------------------- Role 5 ----------------------------------- %%%%%%%
-\subsection*{Intern \hfill Jan 2020 --- May 2020} 
-\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
-    \begin{zitemize}
-        \item Designed Automation Tools for Signal Visualisation and Test status updation using python for Vehicle Motion Control Team 
-        \item Contributed in Vehicle Motion Control Software Validation using Matlab and Simulink
-    \end{zitemize}
-    
-%%%%%%% ----------------------------------- Role 6 ----------------------------------- %%%%%%%
-\subsection*{Intern \hfill Jul 2019 --- Aug 2019} 
-\subtext{Verikwest Systems  \hfill Bangalore} 
-    \begin{zitemize}
-        \item Worked on developing VIP for low power interface module in AMBA for ARM processor
-        \item Designed Tests to verify the functionality of the module
-        
-    \end{zitemize}
 
 
 
