--- a/resume.tex
+++ b/resume.tex
@@ -195,7 +195,7 @@ B.E, Electronics and Communication Engineering graduate with keen interest to be
         
 
 %%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
-\subsection*{Software Test Engineer \hfill Jan 2021 --- Present} 
+\subsection*{Associate Software Engineer \hfill Jan 2021 --- Present} 
 \subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
     \begin{zitemize}
         \item Airbag Embedded Software Validation Engineer, primarily working on Drive Data Recorder and Diagnostic features 
