--- a/resume.tex
+++ b/resume.tex
@@ -182,6 +182,43 @@ B.E, Electronics and Communication Engineering graduate with keen interest to be
 \subsection*{10th Standard, {\normalsize \normalfont St Josephs's Indian High School, 96\%} \hfill Jun 2013 --- Apr 2014} 
 \vspace{0.2cm}
 
+%%%%%%% --------------------------------------------------------------------------------------
+%%%%%%%  WORK EXPERIENCE
+%%%%%%% --------------------------------------------------------------------------------------
+\section{Work Experience}
+
+%%% ----- Best way to write items (Credit - ResumePuppy.com)
+        % \item Developed AngularJS microservice to automate parsing of ~300 emails/day for efficient service request categorization using Linux MBox & Perl scripts; reduced manual re-allocation by 87%.
+        % \item Led the development, build and bring-up execution of Lyft’s first functional AV platform from start to finish; established fleet-grade product reliability over 5 months.
+        % \item Enhanced user experience by fine-tuning stored procedures & SQL queries for efficient data retrieval from ~4M records accessed by 5000+ users worldwide.
+        % \item Built a custom menu single handedly using HTML5, CSS3, XML and JSP and improved the performance of existing application by tuning the PL/SQL scripts by 20\% and reduced on-migration time.
+        
+
+%%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
+\subsection*{Associate Software Engineer \hfill Jan 2021 --- Present} 
+\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
+    \begin{zitemize}
+          \item Designed Test Specifications, Developed Test Automation Scripts  for Hardware in Loop (HiL) validation of Airbag Systems using Perl Framework.
+          \item Designed and executed tests for Drive Data Recorder, Diagnostics, Fault Management and Warning Lamp Indicator modules
+    \end{zitemize}
+
+
+%%%%%%% ----------------------------------- Role 5 ----------------------------------- %%%%%%%
+\subsection*{Intern \hfill Jan 2020 --- May 2020} 
+\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
+    \begin{zitemize}
+        \item Designed Automation Tools for Signal Visualisation and Test status updation using python for Vehicle Motion Control Team 
+        \item Developed Matlab scripts for Vehicle Motion Control Software Validation 
+    \end{zitemize}
+    
+%%%%%%% ----------------------------------- Role 6 ----------------------------------- %%%%%%%
+\subsection*{Intern \hfill Jul 2019 --- Aug 2019} 
+\subtext{Verikwest Systems  \hfill Bangalore} 
+    \begin{zitemize}
+        \item Developed VIP for low power interface module in AMBA for ARM processor
+        \item Designed Tests to verify the functionality of the module
+        
+    \end{zitemize}
 
 
 %%%%%%% --------------------------------------------------------------------------------------
@@ -202,71 +239,35 @@ B.E, Electronics and Communication Engineering graduate with keen interest to be
 \subsection*{Deep Learning and Cloud Based Driver Monitoring System \hfill Jan 2020 --- June 2020} 
     \begin{zitemize}
         \item Designed a system to continously monitor driver to detect passive driver violations based on image classification 
-        \item Data such as type of violation, snapshot, GPS co-ordinates etc would be uploaded to cloud storage
+        \item Streamlined Data such as type of violation, snapshot, GPS co-ordinates for uploading to cloud storage
     \end{zitemize}
 
 
 %%%%%%% ----------------------------------- Role 2 ----------------------------------- %%%%%%%
 \subsection*{Bomb Defusing Robot \hfill Aug 2019 --- Dec 2019} 
     \begin{zitemize}
-        \item Designed a semi autonomous robot with Node MCU and RPi 3 controllers for safe defusing of explosives. Can be operated at a safe range with live video feed for the person controlling the bot
-        \item Fitted with an arm to cut wires in explosives, it can be remotely operated used android phones
+        \item Designed a semi autonomous robot with Node MCU and RPi 3 controllers for safe defusing of explosives, which can be operated at a safe range with live video feed for the person controlling the bot
+        \item Programmed a robotic arm to cut wires in explosives, it can be remotely operated using android phones
     \end{zitemize}
 
 
 %%%%%%% ----------------------------------- Role 3 ----------------------------------- %%%%%%%
 \subsection*{Ant Bot \hfill Nov 2018 --- Mar 2019} 
     \begin{zitemize}
-        \item Implemented as a part of E-Yantra - a national level robotics competition. Basically a system for carrying Cargo to the destination based on colour coding of the cargo
-        \item Worked extensively on Image processing and locomotion of the system. Analogy is drawn between ant as a bot, ant food as cargo and godown as ant hill, hence the name Ant Bot 
+        \item Implemented a system as a part of E-Yantra - a national level robotics competition for carrying cargo to the destination based on its colour coding
+        \item Programmed the Image processing and locomotion of the system.  
     \end{zitemize}
     
 %%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
 \subsection*{Obstacle Detection System \hfill Jan 2018 --- Apr 2019} 
     \begin{zitemize}
-        \item The system was implemented on Arduino UNO controller, it was able to detect, measure distance and the angle at which the object was detected
-        \item The presence of obstacles and the related parameters can be continously displayed on a PC with simple GUI
+        \item Implemented the system on Arduino UNO controller to detect, measure distance and the angle at which the object was detected
+        \item Developed a GUI to continuously display obstacles and related parameters
     \end{zitemize}
 
 
 
-%%%%%%% --------------------------------------------------------------------------------------
-%%%%%%%  WORK EXPERIENCE
-%%%%%%% --------------------------------------------------------------------------------------
-\section{Experience}
 
-%%% ----- Best way to write items (Credit - ResumePuppy.com)
-        % \item Developed AngularJS microservice to automate parsing of ~300 emails/day for efficient service request categorization using Linux MBox & Perl scripts; reduced manual re-allocation by 87%.
-        % \item Led the development, build and bring-up execution of Lyft’s first functional AV platform from start to finish; established fleet-grade product reliability over 5 months.
-        % \item Enhanced user experience by fine-tuning stored procedures & SQL queries for efficient data retrieval from ~4M records accessed by 5000+ users worldwide.
-        % \item Built a custom menu single handedly using HTML5, CSS3, XML and JSP and improved the performance of existing application by tuning the PL/SQL scripts by 20\% and reduced on-migration time.
-        
-
-%%%%%%% ----------------------------------- Role 4 ----------------------------------- %%%%%%%
-\subsection*{Software Test Engineer \hfill Jan 2021 --- Present} 
-\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
-    \begin{zitemize}
-        \item Airbag Embedded Software Validation Engineer, primarily working on Drive Data Recorder and Diagnostic features 
-        \item Responsible for Test Specification, Test Automation Script Development for Hardware in Loop (HiL) validation using Perl Framework.
-    \end{zitemize}
-
-
-%%%%%%% ----------------------------------- Role 5 ----------------------------------- %%%%%%%
-\subsection*{Intern \hfill Jan 2020 --- May 2020} 
-\subtext{Robert Bosch Engineering and Business Solutions \hfill Bangalore} 
-    \begin{zitemize}
-        \item Designed Automation Tools for Signal Visualisation and Test status updation using python for Vehicle Motion Control Team 
-        \item Contributed in Vehicle Motion Control Software Validation using Matlab and Simulink
-    \end{zitemize}
-    
-%%%%%%% ----------------------------------- Role 6 ----------------------------------- %%%%%%%
-\subsection*{Intern \hfill Jul 2019 --- Aug 2019} 
-\subtext{Verikwest Systems  \hfill Bangalore} 
-    \begin{zitemize}
-        \item Worked on developing VIP for low power interface module in AMBA for ARM processor
-        \item Designed Tests to verify the functionality of the module
-        
-    \end{zitemize}
 
 
 
